; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/typec/ucsi/extr_ucsi.c_ucsi_pwr_opmode_change.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/typec/ucsi/extr_ucsi.c_ucsi_pwr_opmode_change.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ucsi_connector = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@TYPEC_PWR_MODE_PD = common dso_local global i32 0, align 4
@TYPEC_PWR_MODE_1_5A = common dso_local global i32 0, align 4
@TYPEC_PWR_MODE_3_0A = common dso_local global i32 0, align 4
@TYPEC_PWR_MODE_USB = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ucsi_connector*)* @ucsi_pwr_opmode_change to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ucsi_pwr_opmode_change(%struct.ucsi_connector* %0) #0 {
  %2 = alloca %struct.ucsi_connector*, align 8
  store %struct.ucsi_connector* %0, %struct.ucsi_connector** %2, align 8
  %3 = load %struct.ucsi_connector*, %struct.ucsi_connector** %2, align 8
  %4 = getelementptr inbounds %struct.ucsi_connector, %struct.ucsi_connector* %3, i32 0, i32 1
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %25 [
    i32 130, label %7
    i32 129, label %13
    i32 128, label %19
  ]

7:                                                ; preds = %1
  %8 = load %struct.ucsi_connector*, %struct.ucsi_connector** %2, align 8
  %9 = getelementptr inbounds %struct.ucsi_connector, %struct.ucsi_connector* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @TYPEC_PWR_MODE_PD, align 4
  %12 = call i32 @typec_set_pwr_opmode(i32 %10, i32 %11)
  br label %31

13:                                               ; preds = %1
  %14 = load %struct.ucsi_connector*, %struct.ucsi_connector** %2, align 8
  %15 = getelementptr inbounds %struct.ucsi_connector, %struct.ucsi_connector* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i32, i32* @TYPEC_PWR_MODE_1_5A, align 4
  %18 = call i32 @typec_set_pwr_opmode(i32 %16, i32 %17)
  br label %31

19:                                               ; preds = %1
  %20 = load %struct.ucsi_connector*, %struct.ucsi_connector** %2, align 8
  %21 = getelementptr inbounds %struct.ucsi_connector, %struct.ucsi_connector* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = load i32, i32* @TYPEC_PWR_MODE_3_0A, align 4
  %24 = call i32 @typec_set_pwr_opmode(i32 %22, i32 %23)
  br label %31

25:                                               ; preds = %1
  %26 = load %struct.ucsi_connector*, %struct.ucsi_connector** %2, align 8
  %27 = getelementptr inbounds %struct.ucsi_connector, %struct.ucsi_connector* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load i32, i32* @TYPEC_PWR_MODE_USB, align 4
  %30 = call i32 @typec_set_pwr_opmode(i32 %28, i32 %29)
  br label %31

31:                                               ; preds = %25, %19, %13, %7
  ret void
}

declare dso_local i32 @typec_set_pwr_opmode(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
